# duckdb

./: CMakeLists.txt  Makefile
.github/workflows/: main.yml
art_standalone/: CMakeLists.txt  art_standalone.cpp  run.sh
google_benchmark/: CMakeLists.txt  art_insert_lookup_benchmark.cpp  test.cpp
google_test/: CMakeLists.txt  art_insert_lookup_test.cpp  test.cpp
src/common/types/: data_chunk.cpp
src/execution/index/art/: art.cpp  leaf.cpp  node.cpp  node16.cpp  node256.cpp  node4.cpp  node48.cpp
src/include/duckdb/execution/index/art/: art.hpp  leaf.hpp  node.hpp  node16.hpp  node256.hpp  node4.hpp  node48.hpp
src/include/duckdb/storage/: index.hpp
